--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
     <script>
         const projects = [
             {
-                title: "Australian Brand Growth",
+                title: "Data Visualisation",
                 category: "youtube",
                 thumbnail: "https://img.youtube.com/vi/n4pX57YfFkM/maxresdefault.jpg", 
                 videoUrl: "n4pX57YfFkM", 
                 isYouTube: true
             },
             {
-                title: "Cybernetic Evolution",
+                title: "3D",
                 category: "3d",
                 thumbnail: "https://images.unsplash.com/photo-1633356122544-f134324a6cee?auto=format&fit=crop&w=800",
                 videoUrl: "https://www.w3schools.com/html/mov_bbb.mp4", 
                 isYouTube: false
             },
             {
-                title: "ComfyUI Neural Style",
+                title: "ComfyUI",
                 category: "comfyui",
                 thumbnail: "https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&w=800",
                 videoUrl: "y6120QYOtw8", 
                 isYouTube: true
             },
             {
-                title: "Character Walk Cycle",
+                title: "Python",
                 category: "animation",
                 thumbnail: "https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&fit=crop&w=800",
                 videoUrl: "https://www.w3schools.com/html/movie.mp4",
