update category names

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Filter Bar -->
         <div class="flex flex-wrap gap-4 mb-12 justify-center">
             <button onclick="filterProjects('all')" class="filter-btn active px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">All</button>
-            <button onclick="filterProjects('youtube')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">YouTube</button>
+            <button onclick="filterProjects('data visualisation')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">YouTube</button>
             <button onclick="filterProjects('comfyui')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">ComfyUI</button>
         </div>
 
@@ -95,14 +95,14 @@
         // Updated Data: Only YouTube videos now
         const projects = [
             {
-                title: "New Visuals",
-                category: "youtube",
+                title: "Line Graph",
+                category: "data visualisation",
                 videoUrl: "WuShF4IkT5k", // <-- NEW VIDEO ADDED HERE
                 isYouTube: true
             },
             {
-                title: "Data Visualisation",
-                category: "youtube",
+                title: "Bar Graph",
+                category: "data visualisation",
                 videoUrl: "D28om1J48L0", 
                 isYouTube: true
             },
