fix button text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="h-screen flex flex-col justify-center items-center text-center px-4">
         <h2 class="text-6xl md:text-8xl font-bold mb-4 tracking-tighter italic">CREATIVE<br>PORTFOLIO</h2>
         <p class="text-gray-400 max-w-lg mx-auto uppercase tracking-widest text-xs">
-            3D Rendering • ComfyUI Workflows • Character Animation • Data Visualisation
+            3D Rendering • ComfyUI Workflows • Data Visualisation • Image Processing
         </p>
         <div class="mt-12 animate-bounce">
             <i data-lucide="chevron-down"></i>
@@ -61,7 +61,7 @@
         <!-- Filter Bar -->
         <div class="flex flex-wrap gap-4 mb-12 justify-center">
             <button onclick="filterProjects('all')" class="filter-btn active px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">All</button>
-            <button onclick="filterProjects('data visualisation')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">YouTube</button>
+            <button onclick="filterProjects('data visualisation')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">Data Visualisation</button>
             <button onclick="filterProjects('comfyui')" class="filter-btn px-6 py-2 rounded-full border border-white/20 text-sm uppercase transition">ComfyUI</button>
         </div>
 
