--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p class="text-gray-500 mb-4 tracking-widest text-xs">© 2026 STUDIO CONGRATULATIONS</p>
         <div class="flex justify-center space-x-6">
             <a href="#"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-            <a href="https://youtube.com/@studiocongratulations"><i data-lucide="youtube" class="w-5 h-5"></i></a>
+            <a href="https://youtube.com/@studio.congratulations"><i data-lucide="youtube" class="w-5 h-5"></i></a>
             <a href="#"><i data-lucide="github" class="w-5 h-5"></i></a>
         </div>
     </footer>
